--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            const response = await fetch('http://localhost:5000/api/auth/signup', {
+            const response = await fetch('http://52.66.80.124:5000/api/auth/signup', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ username, email, password })
