--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
-            const response = await fetch('http://localhost:5000/api/auth/login', {
+            const response = await fetch('http://52.66.80.124:5000/api/auth/login', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ email, password })
