--- a/members.html
+++ b/members.html
@@ -19,17 +19,17 @@
     </header><br/>
 <body>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="members.html">Members of Society</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="awards.html">Awards</a></li>
-                <li><a href="review.html">Review</a></li>
-                <li><a href="memories.html">Memories</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="Route.html">Location</a></li>
-            </ul>
-        </nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="members.html">Members of Society</a></li>
+            <li><a href="Events.html">Events</a></li>
+            <li><a href="Awards.html">Awards</a></li>
+            <li><a href="Review.html">Review</a></li>
+            <li><a href="Memories.html">Memories</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Route.html">Location</a></li>
+        </ul>
+    </nav>
 
         <script>
             function logout() {
